@@ -1,3 +1,8 @@
+2008-07-10  Satoshi Nakagawa <psychs@limechat.net>
+
+	Added commands completion.
+	Added /clear command to clear a log.
+
 ==== LimeChat 0.19 ====
 
 2008-07-08  Kevin Ballard <kballard@gmail.com>
